# trm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
examples/: 00_example.cpp  01_example.cpp  02_example.cpp  03_example.cpp  04_example.cpp  05_example.cpp  06_example.cpp  07_example.cpp  CMakeLists.txt
include/trm/: ThreadSafeQueue.hpp  trm.hpp
test/: CMakeLists.txt  MgrTests.cpp
test_package/: conanfile.txt  test.cpp
